--- a/stalker-injector/Cargo.toml
+++ b/stalker-injector/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+stalker-utils = { path= "../stalker-utils" }
+stalker-mutator = { path= "../stalker-mutator" }
+anyhow = "1.0.57"
+sled = "0.34.7"
+
+[dev-dependencies]
+crossterm = "0.23.2"
