--- a/stalker-utils/Cargo.toml
+++ b/stalker-utils/Cargo.toml
@@ -11,10 +11,10 @@ edition = "2021"
 "serde_json" = "1.0.81"
 "serde_with" = { version = "1.14.0", features = ["hex"] }
 "anyhow" = "1.0.57"
-"serfig" = "0.0.3"
 "nom" = "7.1.1"
 "hex" = "0.4.3"
 "thiserror" = "1.0.31"
 "sled" = "0.34.7"
+log = "0.4.17"
 
 [dev-dependencies]
