examples: add config

--- a/config/libgcrypt/config.toml
+++ b/config/libgcrypt/config.toml
@@ -10,12 +10,21 @@ syms = [
         "sym._gcry_dsa_gen_k",
         "sym._gcry_aes_arm_encrypt_block",
         "sym._gcry_aes_arm_decrypt_block",
+        "sym._gcry_cipher_setkey",
+        "sym._gcry_cipher_aeswrap_encrypt",
+        "sym._gcry_cipher_aeswrap_decrypt",
+        "sym.do_setkey",
     ] },
     { Matches = [
         "sym._gcry_aes_armv8_ce_setkey",
         "sym._gcry_aes_armv8_ce_prepare_decryption",
-        "sym._gcry_aes_armv8_ce_encrypt",
-        "sym._gcry_aes_armv8_ce_decrypt",
+        "sym._gcry_aes_ctr_enc_armv8_ce",
+        "sym._gcry_aes_armv8_ce_cbc_enc",
+        "sym._gcry_aes_armv8_ce_cbc_dec",
+        "sym._gcry_aes_armv8_ce_ctr_enc",
+        "sym._gcry_aes_cbc_enc_armv8_ce",
+        "sym._gcry_aes_cbc_dec_armv8_ce",
+        "sym._gcry_aes_ctr_enc_armv8_ce",
         "sym._gcry_aes_enc_armv8_ce",
         "sym._gcry_aes_dec_armv8_ce",
         "sym._gcry_aes_sbox4_armv8_ce",
