--- a/config/libgcrypt/injections/aes-ecb.toml
+++ b/config/libgcrypt/injections/aes-ecb.toml
@@ -2,7 +2,8 @@ work_dir = "examples/libgcrypt/aes"
 name = "aes-ecb"
 target_syms = [
     "sym._gcry_aes_arm_encrypt_block",
-    "sym._gcry_aes_arm_decrypt_block",
+    "sym._gcry_aes_arm_encrypt_block",
+    "sym.do_setkey",
 ]
 exec_command = "/usr/bin/timeout"
 exec_args = ["30", "./bin"]
