--- a/config/openssl/injections/modes-ctr-armv8.toml
+++ b/config/openssl/injections/modes-ctr-armv8.toml
@@ -1,4 +1,4 @@
-work_dir = "examples/openssl/modes"
+work_dir = "examples/openssl/modes-ctr"
 name = "modes-ctr-armv8"
 target_syms = ["sym.aes_v8_ctr32_encrypt_blocks"]
 exec_command = "/usr/bin/timeout"
