--- a/config/libgcrypt/injections/aes-ecb-armv8.toml
+++ b/config/libgcrypt/injections/aes-ecb-armv8.toml
@@ -1,10 +1,8 @@
 work_dir = "examples/libgcrypt/aes"
-name = "aes-armv8"
+name = "aes-ecb-armv8"
 target_syms = [
     "sym._gcry_aes_armv8_ce_setkey",
     "sym._gcry_aes_armv8_ce_prepare_decryption",
-    "sym._gcry_aes_armv8_ce_encrypt",
-    "sym._gcry_aes_armv8_ce_decrypt",
     "sym._gcry_aes_enc_armv8_ce",
     "sym._gcry_aes_dec_armv8_ce",
     "sym._gcry_aes_sbox4_armv8_ce",
