--- a/config/mbedtls/injections/aes-ecb.toml
+++ b/config/mbedtls/injections/aes-ecb.toml
@@ -1,8 +1,8 @@
 work_dir = "examples/mbedtls/aes"
 name = "aes-ecb"
 target_syms = [
-    "sym._gcry_aes_arm_encrypt_block",
-    "sym._gcry_aes_arm_decrypt_block",
+    "sym.mbedtls_aes_setkey_enc",
+    "sym.mbedtls_aes_setkey_dec",
 ]
 exec_command = "/usr/bin/timeout"
 exec_args = ["30", "./bin"]
