--- a/config/mbedtls/injections/modes-ctr.toml
+++ b/config/mbedtls/injections/modes-ctr.toml
@@ -1,4 +1,4 @@
-work_dir = "examples/mbedtls/modes"
+work_dir = "examples/mbedtls/modes-ctr"
 name = "modes-ctr"
 target_syms = [
     "sym.aes_crypt_ctr_wrap",
