--- a/config/openssl/injections/modes-cbc.toml
+++ b/config/openssl/injections/modes-cbc.toml
@@ -1,4 +1,4 @@
-work_dir = "examples/openssl/modes"
+work_dir = "examples/openssl/modes-cbc"
 name = "modes-cbc"
 target_syms = ["sym.CRYPTO_cbc128_encrypt", "sym.CRYPTO_cbc128_decrypt"]
 exec_command = "/usr/bin/timeout"
