--- a/stalker-bin/Cargo.toml
+++ b/stalker-bin/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2021"
 stalker-utils = { path= "../stalker-utils" }
 stalker-mutator = { path= "../stalker-mutator" }
 stalker-injector = { path= "../stalker-injector" }
+stalker-classifier = { path= "../stalker-classifier" }
 log = "0.4.17"
 env_logger = "0.10.0"
 clap = { version = "4.2.1", features = ["derive"] }
