--- a/stalker-bin/Cargo.toml
+++ b/stalker-bin/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "stalker-bin"
-version = "0.2.0"
+name = "stalker"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,7 +16,7 @@ stalker-injector = { path= "../stalker-injector" }
 stalker-classifier = { path= "../stalker-classifier" }
 log = "0.4.17"
 env_logger = "0.10.0"
-clap = { version = "4.2.1", features = ["derive"] }
+clap = { version = "4.2.2", features = ["derive"] }
 rayon = "1.7.0"
 indicatif = "0.17.3"
 toml = "0.7.3"
