--- a/config/analysis-bitflip-dc.toml
+++ b/config/analysis-bitflip-dc.toml
@@ -2,26 +2,26 @@ detail = true
 fields = 3
 has_expected = true
 model = "DeterministicCipher"
-path = "/home/ray/repo/megrxu/stalker/data/stalker/output/"
-output = { path = "data/stalker/output/",  mode = "All" }
+path = "/home/ray/repo/megrxu/stalker/data/stalker/output/stuck-0x00/"
+output = { path = "data/stalker/output/stuck-0x00/",  mode = "All" }
 
 [experiments]
 "arm-64-linux-libcrypto.so.1.1" = [
-  "aes-ecb",
+  # "aes-ecb",
   # "modes-ctr",
   # "modes-cbc",
   # "modes-cbc-armv8",
 ]
 "arm-64-linux-libcrypto.so.50.0.0" = [
-  "aes-ecb",
+  # "aes-ecb",
   # "modes-ctr",
   # "modes-cbc",
 ]
 
 "arm-64-linux-libgcrypt.so.20.3.4" = [
-  "aes-ecb",
+  # "aes-ecb",
   # "modes-ctr",
-  # "modes-cbc",
+  "modes-cbc",
   # "aes-ecb-armv8",
   # "modes-cbc-armv8",
   # "modes-ctr-armv8"
